user not login schedule

--- a/src/app/features/owner/schedule-owner/schedule-owner-book/schedule-owner-book.component.html
+++ b/src/app/features/owner/schedule-owner/schedule-owner-book/schedule-owner-book.component.html
@@ -30,7 +30,7 @@
                     <span class="font-normal ml-[2px]">{{getCountByStatus('CLOSED')}}/{{getTotalSlots()}}</span>
                 </div>
                 <div class="text-[14px] leading-[120%] font-semibold flex items-center justify-start">
-                    <div class="w-4 h-4 bg-yellow-500 rounded mr-2"></div>
+                    <div class="w-4 h-4 bg-white-500 rounded border mr-2"></div>
                     Chưa có lịch: 
                     <span class="font-normal ml-[2px]">{{getCountByStatus('NOT_AVAILABLE')}}/{{getTotalSlots()}}</span>
                 </div>
