base email template

--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -11,6 +11,10 @@
           <i class="fa-solid fa-users"></i>
           <span class="ml-3">Danh sách tài khoản</span>
         </li>
+        <li nz-menu-item [routerLink]="['/', 'email-template']" nzMatchRouter class="menu-item">
+          <i class="fa-regular fa-pen-to-square"></i>
+          <span class="ml-3">Cấu hình email</span>
+        </li>
         <li nz-menu-item [routerLink]="['/', 'setting']" nzMatchRouter class="menu-item">
           <i class="fa-solid fa-gear"></i>
           <span class="ml-3">Cài đặt</span>
