--- a/src/app/features/owner/facility/add-facility/add-facility.component.html
+++ b/src/app/features/owner/facility/add-facility/add-facility.component.html
@@ -84,9 +84,12 @@
                 </div>
                 <div class="flex flex-col flex-1">
                     <span class="mb-1">Mô tả</span>
-                    <mat-form-field class="custom-input " appearance="outline">
-                        <textarea matInput formControlName="description" rows="5"></textarea>
-                    </mat-form-field>
+                    <div class="border rounded-md">
+                        <app-text-editor 
+                            [value]="form.get('description')?.value" 
+                            (changeContent)="onEditorContentChanged($event)">
+                        </app-text-editor>
+                    </div>
                 </div>
             </div>
         </form>
