--- a/src/app/features/user/list-fields/fields-detail/feilds-shedule/feilds-shedule.component.html
+++ b/src/app/features/user/list-fields/fields-detail/feilds-shedule/feilds-shedule.component.html
@@ -13,6 +13,10 @@
       <span>Đã đóng</span>
     </div>
     <div class="flex items-center">
+      <div class="w-4 h-4 bg-gray-400 mr-1"></div>
+      <span>Chờ phê duyệt</span>
+    </div>
+    <div class="flex items-center">
       <div class="w-4 h-4 bg-white mr-1 border"></div>
       <span>Không có lịch</span>
     </div>
