--- a/src/app/features/user/list-fields/fields-detail/modal-book/modal-book.component.html
+++ b/src/app/features/user/list-fields/fields-detail/modal-book/modal-book.component.html
@@ -15,6 +15,12 @@
                             </span>
                         </div>
                         <div class="w-full flex flex-col">
+                            <input class="h-[40px] w-full px-[10px] py-[8px] outline-none border-none" placeholder="Nhập email người đặt" formControlName="customerEmail" />
+                            <span *ngIf="form.get('customerEmail')?.invalid && form.get('customerEmail')?.touched" class="text-red-500 text-sm px-[10px]">
+                                <i class="fa-solid fa-triangle-exclamation"></i> Vui lòng nhập email.
+                            </span>
+                        </div>
+                        <div class="w-full flex flex-col">
                             <input class="h-[40px] w-full px-[10px] py-[8px] outline-none border-none" placeholder="Nhập số điện thoại người đặt" formControlName="cellPhone" />
                             <ng-container *ngIf="form.get('cellPhone')?.touched">
                                 <span *ngIf="form.get('cellPhone')?.hasError('required'); else invalidPhone" class="text-red-500 text-sm px-[10px]">
@@ -79,15 +85,15 @@
                     <div class="h-[40px] uppercase bg-[#F8F8FC] text-[#82869E] p-[10px]">Mã QR thanh toán</div>
                     <div class="flex flex-col items-center justify-center w-full h-[300px] p-4">
                         <div class="flex flex-col items-center">
-                            <img src="../../../../../../assets/img/QRVnpay.jpg" alt="QR Code" class="object-contain max-w-[200px] max-h-[200px] mb-2"/>
+                            <img [src]="slot.priceImageUrl" alt="QR Code" class="object-contain max-w-[200px] max-h-[200px] mb-2"/>
                             <p class="text-sm text-gray-600 mt-2">Quét mã QR để thanh toán tiền cọc</p>
-                            <p class="text-sm font-medium text-green-600 mt-1">30.000 VND</p>
+                            <p class="text-sm font-medium text-green-600 mt-1">{{slot.finalPrice * 0.3}} VND</p>
                         </div>
                     </div>
                 </div>
                 <div class="w-[50%] flex flex-col border">
                     <div class="h-[40px] uppercase bg-[#F8F8FC] text-[#82869E] p-[10px]">Ảnh bill thanh toán</div>
-                    <!-- <div class="flex flex-col items-center justify-center w-full h-[300px] p-4">
+                    <div class="flex flex-col items-center justify-center w-full h-[300px] p-4">
                         <div *ngIf="!paymentImage" class="flex flex-col items-center justify-center h-full w-full">
                             <div 
                                 class="border-2 border-dashed border-gray-300 rounded-lg p-6 text-center cursor-pointer hover:border-blue-500 transition-colors w-full h-full flex flex-col items-center justify-center"
@@ -114,7 +120,7 @@
                                 <i class="fa-solid fa-times text-xs"></i>
                             </button>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
             </div>
             <div class="w-full flex flex-col border">
