--- a/src/app/features/owner/schedule-owner/schedule-owner-book/schedule-owner-book.component.html
+++ b/src/app/features/owner/schedule-owner/schedule-owner-book/schedule-owner-book.component.html
@@ -25,9 +25,14 @@
                     <span class="font-normal ml-[2px]">{{getCountByStatus('AVAILABLE')}}/{{getTotalSlots()}}</span>
                 </div>
                 <div class="text-[14px] leading-[120%] font-semibold flex items-center justify-start">
-                    <div class="w-4 h-4 bg-gray-500 rounded mr-2"></div>
+                    <div class="w-4 h-4 bg-yellow-500 rounded mr-2"></div>
                     Đóng: 
                     <span class="font-normal ml-[2px]">{{getCountByStatus('CLOSED')}}/{{getTotalSlots()}}</span>
+                </div>
+                <div class="text-[14px] leading-[120%] font-semibold flex items-center justify-start">
+                    <div class="w-4 h-4 bg-gray-400 rounded mr-2"></div>
+                    Chờ phê duyệt: 
+                    <span class="font-normal ml-[2px]">{{getCountByStatus('WAITING_APPROVAL')}}/{{getTotalSlots()}}</span>
                 </div>
                 <div class="text-[14px] leading-[120%] font-semibold flex items-center justify-start">
                     <div class="w-4 h-4 bg-white-500 rounded border mr-2"></div>
@@ -103,6 +108,7 @@
                 <option value="AVAILABLE">Còn trống</option>
                 <option value="BOOKED">Đã đặt</option>
                 <option value="CLOSED">Đóng cửa</option>
+                <option value="WAITING_APPROVAL">Chờ phê duyệt</option>
                 <option value="NOT_AVAILABLE" [disabled]="selectedSlot.status === 'NOT_AVAILABLE'">Chưa có lịch</option>
             </select>
         </div>
