--- a/src/app/features/owner/schedule-owner/schedule-owner-book/schedule-owner-book.component.html
+++ b/src/app/features/owner/schedule-owner/schedule-owner-book/schedule-owner-book.component.html
@@ -75,7 +75,7 @@
 </div>
 
 <!-- Modal chỉnh sửa trạng thái -->
-<div *ngIf="showModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+<div *ngIf="showModal && selectedSlot.status !== 'NOT_AVAILABLE'" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
     <div class="bg-white p-6 rounded-lg shadow-lg w-[650px] max-w-full">
         <h3 class="text-xl text-center font-bold mb-4">Cập nhật lịch sân</h3>
         <div class="mb-4 flex gap-[8px] items-center justify-start text-red-500">
@@ -89,11 +89,10 @@
             <div class="flex-1">
                 <label class="block mb-2">Trạng thái:</label>
                 <select [(ngModel)]="selectedSlot.status" class="w-full p-2 border rounded">
-                    <option value="AVAILABLE" style="color: #22c55e">Còn trống</option>
+                    <option [disabled]="selectedSlot.status !== 'CLOSED'" value="AVAILABLE" style="color: #22c55e">Còn trống</option>
                     <option value="BOOKED" style="color: #ef4444">Đã đặt</option>
                     <option value="CLOSED" style="color: #eab308">Đóng cửa</option>
                     <option value="WAITING_APPROVAL" style="color: #9ca3af">Chờ phê duyệt</option>
-                    <option value="NOT_AVAILABLE" style="color: #000000; border: 1px solid #e5e7eb" [disabled]="selectedSlot.status === 'NOT_AVAILABLE'">Chưa có lịch</option>
                 </select>
             </div>
             <div class="flex-1">
